solution section fixing on safari

--- a/src/component/Solution/Solution.css
+++ b/src/component/Solution/Solution.css
@@ -79,21 +79,21 @@
     width: 33%;
     /* margin: -40px 0 0 80px; */
     position: relative;
-    top: 110%;
+    top: 110% !important;
     left: 25%;
 }
 .solution3_2_img{
     width: 35%;
     /* margin: -40px 0 0 100px; */
     position: relative;
-    top: 110%;
+    top: 110% !important;
     left: 28%;
 }
 .solution3_3_img{
     width: 25%;
     /* margin: -35px 0 0 110px; */
     position: relative;
-    top: 120%;
+    top: 120% !important;
     left: 29%;
 }
 .solution_circle{
